--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ email-validator==2.1.0
 Werkzeug==3.0.1
 gunicorn==21.2.0
 APScheduler==3.10.4
+flask-socketio==5.3.5
+python-socketio==5.10.0
+eventlet==0.33.3
